Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/EnumProtectedConstructor.out
EnumProtectedConstructor.java:16:15: compiler.err.mod.not.allowed.here: protected
1 error
